fix header on mobile

--- a/static/css/style.styl
+++ b/static/css/style.styl
@@ -390,8 +390,7 @@ body
 
     header
       &.homepage
-        height 90%
-        max-height 450px
+        height auto
         & > .text
           h1
             font-size 60px
